# OptimusPrime

./: .dockerignore  .env.template  .gitignore  Dockerfile  OpenQuestions.sql  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
app/: configs.py  db.py  models.py  utils.py
app/api/: api.py  schemas.py
app/grpc/unicron/: __init__.py  unicron_pb2.py  unicron_pb2_grpc.py  utils.py
app/services/: __init__.py  answers.py  messages.py  questions.py  rooms.py  topics.py
